borrar y editar generos hecho

--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
@@ -160,6 +160,7 @@
             await OnBookDeleted.InvokeAsync();
         }
         _deletingBook = false;
+        ShowDeleteBookConfirmationDialog = false;
         StateHasChanged();
     }
 
