--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -85,6 +85,7 @@
     --color-neutral-100: oklch(97% 0 0);
     --color-neutral-200: oklch(92.2% 0 0);
     --color-neutral-300: oklch(87% 0 0);
+    --color-neutral-700: oklch(37.1% 0 0);
     --color-neutral-900: oklch(20.5% 0 0);
     --color-neutral-950: oklch(14.5% 0 0);
     --color-black: #000;
@@ -1159,6 +1160,9 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-row {
+    flex-direction: row;
+  }
   .flex-nowrap {
     flex-wrap: nowrap;
   }
@@ -2047,6 +2051,9 @@
   .text-neutral-300 {
     color: var(--color-neutral-300);
   }
+  .text-neutral-700 {
+    color: var(--color-neutral-700);
+  }
   .text-neutral-900 {
     color: var(--color-neutral-900);
   }
@@ -2061,6 +2068,9 @@
   }
   .text-red-500 {
     color: var(--color-red-500);
+  }
+  .text-red-600 {
+    color: var(--color-red-600);
   }
   .text-red-700 {
     color: var(--color-red-700);
