pantallas y reglas de normalizacion

--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
@@ -61,7 +61,7 @@
         else
         {
             <img src="@Book.CoverUrl"
-                 class="object-contain w-full h-full brightness-75 "
+                 class="object-cover w-full h-full brightness-75 "
 
                  alt="Card background"/>
         }
