--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Penalizations/Common/PenalizationCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Penalizations/Common/PenalizationCard.razor
@@ -31,7 +31,7 @@
 
             <div class="flex flex-col">
               <SidebarSectionDivider Name="Detalles de cobro"/>
-                <span class="font-semibold text-sm mt-2 inconsolata"> Taza de préstamo (diario): <span class="bg-black text-white inconsolata">RD$ 75.00</span></span>
+                <span class="font-semibold text-sm mt-2 inconsolata"> Taza de penalización (diario): <span class="bg-black text-white inconsolata">RD$ 75.00</span></span>
                 <span class="font-semibold text-sm mt-2 inconsolata"> Dias excedidos: <span class="bg-black text-white inconsolata">2 dias</span></span>
 
                 <span class="font-semibold text-sm mt-2 inconsolata">Monto a pagar: <span class="bg-neutral-950 text-white "> RD$ 150.00   </span></span>
