--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Readers/Common/ReaderCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Readers/Common/ReaderCard.razor
@@ -1,9 +1,20 @@
-<div class="w-full aspect-[2/3] rounded-lg border-neutral-200 bg-neutral-100 flex flex-col gap-2 p-2 items-center">
-    <LumexAvatar Name="Jose Manuel" />
-    <label class="text-[13px] font-semibold opacity-80">Jose Manuel Lopez</label>
-
-    <div class="flex flex-col w-full gap-1 mt-auto">
-        <label class="text-[13px]">2020-0333</label>
+<div class="w-full  rounded-lg  bg-neutral-5 hover:bg-neutral-100 flex  gap-3 p-3  ">
+    <LumexAvatar Name="Jose Manuel"  Color="ThemeColor.Primary" Size="Size.Small" Class=" !shrink-0" />
+    
+    <div class="w-full flex flex-col">
+        <label class="text-[16px] font-semibold opacity-80 text-black ">Jose Manuel Lopez</label>
+        <label class="text-[13px] font-normal text-black">2020-0333</label>
+        
+        <SidebarSectionDivider Name="Detalles"/>
+        
+        <label class="text-[13px] font-normal  "><strong>Ultimo Prestamo:</strong> 23 oct 2025 (Activo)</label>
+        <label class="text-[13px] font-normal "><strong>Prestamos pedidos:</strong> 2</label>
     </div>
+    
+    <EllipsisVerticalIcon Size="18px" class="cursor-pointer"/>
+  
+    
+
+   
     
 </div>
