--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -39,6 +39,11 @@
 @using BibliotecaUteco.Client.Components.Genres.Common
 @using BibliotecaUteco.Client.Components.Books.Forms
 @using BibliotecaUteco.Client.Requests.Books.Queries
+@using BibliotecaUteco.Client.Components.Penalizations.Common
+@using BibliotecaUteco.Client.Components.Readers.Common
+@using BibliotecaUteco.Client.Components.Transactions.Common
+@using BibliotecaUteco.Client.Components.Users.Common
+@using BibliotecaUteco.Client.Components.Users.Views
 
 @using BibliotecaUteco.Client.Components.Genres.Skeletons
 @using BibliotecaUteco.Client.Components.Genres.Views
