--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/SideBar.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/SideBar.razor
@@ -66,13 +66,13 @@
                     </Icon>
             </SideBarButton>
 
-            <SideBarButton   Name="Penalizaciones" IsExpanded="SideBarExpanded">
+            <SideBarButton OnClick='()=>{NavManager.NavigateTo("/penalizations");}'  Name="Penalizaciones" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-triangle-alert-icon lucide-triangle-alert"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"/><path d="M12 9v4"/><path d="M12 17h.01"/></svg>
                 </Icon>
             </SideBarButton>
          
-            <SideBarButton   Name="Lectores" IsExpanded="SideBarExpanded">
+            <SideBarButton OnClick='()=>{NavManager.NavigateTo("/readers");}'  Name="Lectores" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-heart-icon lucide-book-heart"><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M8.62 9.8A2.25 2.25 0 1 1 12 6.836a2.25 2.25 0 1 1 3.38 2.966l-2.626 2.856a.998.998 0 0 1-1.507 0z"/></svg>                   
                     </Icon>
@@ -84,12 +84,12 @@
             
             <SidebarSectionDivider Name="Administradores" IsExpanded="SideBarExpanded"/>
             
-            <SideBarButton   Name="Transacciones" IsExpanded="SideBarExpanded">
+            <SideBarButton OnClick='()=>{NavManager.NavigateTo("/transactions");}'  Name="Transacciones de caja" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-left-icon lucide-arrow-right-left"><path d="m16 3 4 4-4 4"/><path d="M20 7H4"/><path d="m8 21-4-4 4-4"/><path d="M4 17h16"/></svg>                </Icon>
             </SideBarButton>
 
-            <SideBarButton  Name="Usuarios" IsExpanded="SideBarExpanded">
+            <SideBarButton OnClick="SetUsersView"  Name="Usuarios" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-users-round-icon lucide-users-round"><path d="M18 21a8 8 0 0 0-16 0"/><circle cx="10" cy="8" r="5"/><path d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"/></svg>                    
                     </Icon>
@@ -128,6 +128,11 @@
     public async Task  SwitchSideBarExpanded()
     {
         await TriggerOnSideBarExpandedChanged();
+    }
+
+    public void SetUsersView()
+    {
+        RightBarContext.SetView(RightBarView.Users);
     }
 
     public async Task TriggerOnSideBarExpandedChanged(){
