--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/ReadersPage.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/ReadersPage.razor
@@ -7,26 +7,37 @@
         <h2 class="text-3xl font-semibold">Lectores</h2>
     </div>
 
-    <div class="flex w-full gap-2 items-center">
-        <LumexTextbox Type="@InputType.Search"
-                        Label="Filtrar Préstamos"
-                        Placeholder="@PlaceholderText"
-                        LabelPlacement="@LabelPlacement.Outside"
-                        Description="Usa los filtros de abajo para filtrar por Id o por la matricula/cédula del lector"/>
-         <LumexTooltip Content=@($"Buscar libros Prestamos ")>
-                    <LumexButton Type="ButtonType.Submit"  Size="Size.Medium" Color="ThemeColor.Primary">Buscar</LumexButton>
-
-                </LumexTooltip>
+    <div class="flex w-full gap-2">
+        <div class="flex flex-col gap-1 w-full">
+            <LumexTextbox Type="@InputType.Search"
+                          Placeholder="Buscar lectores"
+                          LabelPlacement="@LabelPlacement.Outside"
+                          />
+            <p class="text-[13px] text-black">Usa los filtros de abajo para filtrar lectores por matricula o cédula </p>
+        </div>
+       
+        <LumexTooltip Content=@($"Buscar libros Prestamos ")>
+            <LumexButton Type="ButtonType.Submit" Size="Size.Medium" Color="ThemeColor.Primary">Buscar</LumexButton>
+        </LumexTooltip>
     </div>
-   
+    <div class="mb-3 max-w-full flex items-center gap-2 flex-wrap">
+        <LumexChip  @onclick='()=>{SetFilterBy("all");}' Variant="@(FilterBy == "all" ? ChipVariant.Solid : ChipVariant.Flat )" Color="@ThemeColor.Primary">Todo</LumexChip>
+        <LumexChip  @onclick='()=>{SetFilterBy("studentIdentity");}' Variant="@(FilterBy == "studentIdentity" ? ChipVariant.Solid : ChipVariant.Flat )" Color="@ThemeColor.Primary">Solo matrícula</LumexChip>
+        <LumexChip  @onclick='()=>{SetFilterBy("identity");}' Variant="@(FilterBy == "identity" ? ChipVariant.Solid : ChipVariant.Flat )" Color="@ThemeColor.Primary">Por cédula</LumexChip>
+
+     
+    </div>
     <SidebarSectionDivider Name="Lectores"/>
-    <div class="grid max-sm:grid-cols-2 max-md:grid-cols-3 grid-cols-6 gap-7">
+    <div class="flex flex-col gap-3">
 
     
-        <button class="border-dotted border-[3px] border-green-600 aspect-[2/3] w-full rounded-xl hover:bg-green-100/30 transition-all flex flex-col justify-center items-center gap-2 cursor-pointer ">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide text-green-700 lucide-book-plus-icon lucide-book-plus"><path d="M12 7v6"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M9 10h6"/></svg>
-            <p class="text-xs text-green-700">Agregar Usuario</p>
+        <button class="border-dotted border-2 border-green-600 p-3 w-full rounded-xl hover:bg-green-100/30 transition-all flex  justify-center items-center gap-2 cursor-pointer ">
+            <UserIcon Size="18px" class="text-green-700"/>
+            <p class="text-[13px] text-green-700">Agregar Usuario</p>
         </button>
+        
+        
+        <ReaderCard/>
                    
      
 
@@ -35,22 +46,9 @@
 </div>
 
 @code{
-    public string FilterBy {get; set;} = "userIdentifier";
-    public string FilterByState {get; set;} = "all";
+    public string FilterBy {get; set;} = "all";
 
-    public string PlaceholderText
-    {
-        get
-        {
-            return FilterBy switch
-            {
-                "reader" => "Ej: Nombre del lector",
-                "userIdentifier" => "Ej: 000-0000000-0",
-                "studentIdentifier" => "Ej: 2021-1234",
-                _ => "Buscar..."
-            };
-        }
-    }
+    
 
    
 
@@ -61,9 +59,7 @@
         FilterBy = filter;
     }
 
-    public void SetFilterByState(string filter){
-        FilterByState = filter;
-    }
+   
 
     
 
