--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/RightBar.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/RightBar.razor
@@ -9,6 +9,8 @@
             RightBarView.UpdateBook => "Actualizar Libro",
             RightBarView.BookDetails => "Acerca del libro",
             RightBarView.Users => "Administrar Usuarios",
+            RightBarView.CreateUser => "Crear Usuario",
+
 
 
             _ => ""
@@ -34,6 +36,10 @@
     else if (RightBarContext.View == RightBarView.Users)
     {
         <UsersView/>
+    }
+    else if (RightBarContext.View == RightBarView.CreateUser)
+    {
+        <CreateUserForm/>
     }
     
 </aside>
