--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -116,6 +116,7 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --radius-xs: 0.125rem;
+    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -613,6 +614,9 @@
   .mt-\[20px\] {
     margin-top: 20px;
   }
+  .mt-\[40px\] {
+    margin-top: 40px;
+  }
   .mt-\[50px\] {
     margin-top: 50px;
   }
@@ -821,6 +825,9 @@
   .h-\[40px\] {
     height: 40px;
   }
+  .h-\[75px\] {
+    height: 75px;
+  }
   .h-\[100px\] {
     height: 100px;
   }
@@ -932,11 +939,17 @@
   .w-\[25\%\] {
     width: 25%;
   }
+  .w-\[30\%\] {
+    width: 30%;
+  }
   .w-\[30px\] {
     width: 30px;
   }
   .w-\[40\%\] {
     width: 40%;
+  }
+  .w-\[50\%\] {
+    width: 50%;
   }
   .w-\[60\%\] {
     width: 60%;
@@ -1292,6 +1305,9 @@
   }
   .rounded-none {
     border-radius: 0 !important;
+  }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
   }
   .rounded-small {
     border-radius: var(--lumex-radius-small);
