--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Users/Views/UsersView.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Users/Views/UsersView.razor
@@ -1,8 +1,8 @@
 <div class="flex w-full absolute flex-col justify-center ">
     <img class="w-full object-cover h-[100px]" src="https://uteco.edu.do/wp-content/uploads/Biblioteca.jpg"/>
-    <div class="w-full flex flex-col gap-3 p-3">
+    <div class="w-full flex flex-col gap-1 p-3">
         <label class="text-[13px] mb-3 font-semibold opacity-80 ">Administra los usuarios que pueden utilizar esta plataforma</label>
-        <button @onclick="SetCreateUserView" class="hover:bg-green-50  cursor-pointer transition-all rounded-lg border-dashed border w-full flex items-center justify-center p-2 border-green-600 gap-2">
+        <button @onclick="SetCreateUserView" class="hover:bg-green-50 my-3 cursor-pointer transition-all rounded-lg border-dashed border w-full flex items-center justify-center p-2 border-green-600 gap-2">
             <span class="text-green-600 font-semibold text-sm">Crear Usuario</span>
         </button>
         @foreach (var user in Users)
